--- a/style.css
+++ b/style.css
@@ -3,6 +3,236 @@
   padding: 0;
   box-sizing: border-box;
 }
-h1{
-    color: red;
+/* .container {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(180deg,green,yellow,blue,crimson);
+  background: radial-gradient(green, yellow, blue, crimson);
+}
+.gradient-text {
+  background-color: red;
+  background-image: linear-gradient(180deg, #080808, #ff8800);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+} */
+
+/* position fixed scroll ta'sir qimaydi a sticky ta'sir qiladi */
+.navbar {
+  width: 100%;
+  padding: 12px 30px;
+  background-color: rgb(23, 24, 23);
+  color: wheat;
+  position: sticky;
+  top: 20px;
+  margin-top: 100px;
+}
+.box {
+  width: 500px;
+  height: 500px;
+  padding: 40px;
+  margin: 30px auto;
+  /* border: 2px solid; */
+  position: relative;
+}
+/* relative otasi hisoblanadi */
+.box-item {
+  width: 50px;
+  height: 50px;
+  background-color: aquamarine;
+  position: absolute;
+  top: 40px;
+}
+/* nth-child  nechanchi child*/
+/* even odd */
+/* first-child last-child */
+.box p:nth-child(odd) {
+  color: green;
+  font-size: 25px;
+}
+.box button {
+  width: 200px;
+  height: 60px;
+  padding: 15px 30px;
+  cursor: pointer;
+  background-color: rgb(80, 108, 148);
+  color: white;
+  border: none;
+  border-radius: 2px;
+  /* temp: linear ease ease-in-out  */
+  transition: all 0.8s linear;
+  font-size: 18px;
+}
+button:hover {
+  border-radius: 45px;
+}
+button:active {
+  background-color: rgb(60, 133, 60);
+  border: 1px solid green;
+}
+h1 {
+  padding-left: 100px;
+}
+.buttons {
+  padding-left: 100px;
+  padding-top: 30px;
+  display: flex;
+  gap: 10px;
+}
+button {
+  width: 150px;
+  height: 70px;
+  border-radius: 5px;
+  border: none;
+  font-size: 18px;
+  color: white;
+}
+.buttons button:nth-last-child(5) {
+  background: linear-gradient(55deg, crimson, yellow);
+}
+.buttons button:nth-last-child(4) {
+  background: linear-gradient(55deg, rgb(112, 214, 245), rgb(57, 47, 194));
+}
+.buttons button:nth-last-child(3) {
+  background: linear-gradient(55deg, rgb(114, 230, 214), rgb(112, 255, 93));
+}
+.buttons button:nth-last-child(2) {
+  background: linear-gradient(55deg, rgb(140, 19, 240), rgb(233, 24, 188));
+}
+.buttons button:nth-last-child(1) {
+  background: linear-gradient(55deg, rgb(255, 255, 255), rgb(158, 158, 158));
+}
+
+.mebellar {
+  /* width: 100%;
+  height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  padding-top: 10px;
+}
+.mebel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 600px;
+  height: 300px;
+  border: 1px solid rgb(223, 223, 223);
+  background-size: 350px 250px;
+  background: linear-gradient(
+    180deg,
+    rgb(255, 255, 255),
+    rgb(237, 242, 255),
+    rgb(122, 146, 197)
+  );
+  position: relative;
+}
+.mebellar .mebel:nth-child(1):after {
+  content: "Mehmonxona uchun katta yumshoq mebel";
+  color: white;
+  position: absolute;
+  top: 220px;
+  right: 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.mebellar .mebel:nth-child(1):before {
+  content: "2 500 000";
+  color: white;
+  position: absolute;
+  top: 250px;
+  right: 20px;
+  font-size: 18px;
+}
+.mebellar .mebel:nth-child(2):after {
+  content: "Mehmonxona uchun yumshoq mebel";
+  color: white;
+  position: absolute;
+  top: 220px;
+  right: 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.mebellar .mebel:nth-child(2):before {
+  content: "1 000 000";
+  color: white;
+  position: absolute;
+  top: 250px;
+  right: 20px;
+  font-size: 18px;
+}
+.mebellar .mebel:nth-child(3):after {
+  content: "Oshxona uchun yumshoq mebel";
+  color: white;
+  position: absolute;
+  top: 220px;
+  right: 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.mebellar .mebel:nth-child(3):before {
+  content: "1 500 000";
+  color: white;
+  position: absolute;
+  top: 250px;
+  right: 20px;
+  font-size: 18px;
+}
+
+img {
+  width: 320px;
+  height: 280px;
+}
+.bar {
+  width: 80%;
+  height: 100px;
+  background-color: rgb(230, 230, 230);
+  padding: 35px;
+  margin: 30px 60px;
+  position: relative;
+
+}
+ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+  font-size: 25px;
+  color: blueviolet;
+}
+.circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #5965d3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+p {
+  color: #fff;
+  font-size: 15px;
+}
+.bar div:nth-child(2) {
+  position: absolute;
+  top: 30px;
+  left: 160px;
+}
+.bar div:nth-child(3) {
+  position: absolute;
+  top: 30px;
+  left: 330px;
+}
+.bar div:nth-child(4) {
+  position: absolute;
+  top: 30px;
+  left: 510px;
+}
+.bar div:nth-child(5) {
+  position: absolute;
+  top: 30px;
+  left: 740px;
 }
