--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ img {
   height: 280px;
 }
 .bar {
-  width: 80%;
+  width: 770px;
   height: 100px;
   background-color: rgb(230, 230, 230);
   padding: 35px;
